--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,8 +2,9 @@
     display: flex;
     align-items: center;
 justify-content: space-between;
-    margin: 20px auto;
-    padding: 20px 0;
+    margin: 1rem auto;
+/*    padding: 20px 0;*/
+/*    background-color:black;*/
     width: 80%;
 }
 .left{}
